--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,3 +1,4 @@
+
 <section class="section-index-one" style="background-color: #1D2929;">
     <div class="container">
         <div class="row justify-content-center text-center" >
@@ -100,6 +101,43 @@ Trabajamos en equipo, en el que tu empresa hace parte activa, es por esto, que d
                     <span >Contamos con experiencia internacional certificada en los mercados norteamericano, centroamericano y suramericano.</span>
                 </div>
              </div>
+        </div>
+    </div>
+</section>
+<section class="section-index-five mt-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 col-xxl-4 mt-5 mx-5">
+                <h1>Contactenos</h1>
+                <form class="mt-5 ">
+                    <div class="wrapper">
+                      <!-- Email input -->
+                      <div class="form-outline input-data mb-4">
+                        <input type="text" class="form-control" id="nombreUsuario" formControlName="nombreUsuario" required/>
+                        <div class="underline"></div>
+                        <label class="form-label" for="form3Example3">Email address</label>
+                      </div>
+        
+                      <!-- Password input -->
+                      <div class="form-outline input-data mb-4">
+                        <input type="text"  class="form-control" id="phone" formControlName="password" required/>
+                        <div class="underline"></div>
+                        <label class="form-label" for="form3Example4">Phone</label>
+                      </div>   
+                    <div class="form-outline input-data mb-4">
+                        <textarea type="text"  class="form-control" id="phone" formControlName="password" required></textarea>
+                        <div class="underline"></div>
+                        <label class="form-label" for="form3Example4">Mensaje</label>
+                      </div> 
+                      <!-- Submit button -->
+                      <div class="text-center">
+                        <button type="submit" class="btn btn-primary btn-block mb-4">
+                            Sign up
+                          </button> 
+                      </div>
+                    </div>
+                  </form>
+            </div>
         </div>
     </div>
 </section>
