--- a/src/app/plantillas/carousel/carousel.component.html
+++ b/src/app/plantillas/carousel/carousel.component.html
@@ -1,7 +1,7 @@
 <ngb-carousel #carousel [interval]="4000" [pauseOnHover]="pauseOnHover" [pauseOnFocus]="pauseOnFocus" (slide)="onSlide($event)">
     <ng-template ngbSlide *ngFor="let img of images; index as i">
       <div class="carousel-caption">
-        <h3>My slide {{i + 1}} title</h3>
+        <h3>CREAMOS UNA EXPERIENCIA TECNOLÓGICA COMPLETA PARA TU NEGOCIO</h3>
       </div>
       <a href="https://www.google.fr/?q=Number+{{i+1}}" target="_blank" rel="nofollow noopener noreferrer">
         <div class="picsum-img-wrapper">
