--- a/src/app/plantillas/header/header.component.css
+++ b/src/app/plantillas/header/header.component.css
@@ -1,12 +1,17 @@
-.header_variable{
+.header_change{
     position: fixed;
-    background-color: green;
-    z-index: 1;
+    background-color: white;
+    z-index: 2;
     width: 100%;
+    height: 80px;
+}
+.header_change ul li a{
+    color: black;
 }
 header{
     position: fixed;
-    background-color: red;
-    z-index: 1;
+    box-shadow: 1px 10px 15px rgba(0, 0, 0, 0.20);
+    z-index: 2;
     width: 100%;
+    height: 80px;
 }
